Fixed table aligning

--- a/src/containers/app/App.css
+++ b/src/containers/app/App.css
@@ -4478,6 +4478,7 @@ input {
 table tr > td {
   white-space: nowrap;
   max-width: 300px;
+  overflow: hidden;
   text-overflow: ellipsis;
   min-width: 70px; }
 
