--- a/src/containers/app/scss/global.scss
+++ b/src/containers/app/scss/global.scss
@@ -2433,7 +2433,7 @@ table {
 	tr > td {
 		white-space: nowrap;
 		max-width: 300px;
-		//overflow: hidden;
+		overflow: hidden;
 		text-overflow: ellipsis;
 		min-width: 70px;
 	}
